# deployments-tracking-bot

./: .env.example  .env_example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
messages/: telegram.html  telegram.txt
src/: lib.rs  logging.rs  main.rs
src/database/: create_table.rs  init.rs  mod.rs  table.rs  table_create.rs  table_exists.rs  table_read.rs  table_write.rs
src/database/table/: read.rs  write.rs
src/digitalocean/: apps.rs  auth.rs  deployments.rs  error.rs  init.rs  mod.rs
src/digitalocean/apps/: get.rs
src/digitalocean/deployments/: get.rs
src/digitalocean/models/: app.rs  deployment.rs  mod.rs
src/telegram/: init.rs  message.rs  mod.rs  send_message.rs
src/telegram/message/: send.rs
src/worker/: init.rs  mod.rs  work.rs
