[package]
name = "telegram-devops-bot"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.11", features = ["json"] }

serde = "1.0"
serde_derive = "1.0"

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
humantime = "2.1"

log = "0.4"
simplelog = "0.11"